gogs/svc-gogs.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-gogs
  namespace: gogs
  labels:
    name: gogs
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    name: gogs
  type: ClusterIP
