gogs/ing-gogs.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-gogs
  namespace: gogs
spec:
  rules:
  - host: gogs.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-gogs
            port: 
              number: 3000
